--- a/index.html
+++ b/index.html
@@ -273,7 +273,10 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Relatório de Vendas</h2>
-                    <button class="btn btn-secondary" onclick="exportarRelatorioExcel()">Exportar Excel</button>
+                    <div>
+                        <button class="btn btn-secondary" onclick="exportarRelatorioExcel()">Exportar Excel</button>
+                        <button class="btn btn-secondary" onclick="exportarRelatorioPDF()">Exportar PDF</button>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="filters">
