--- a/index.html
+++ b/index.html
@@ -219,51 +219,49 @@
                 </div>
                 <div class="card-body">
                     <form id="vendaForm">
-                        <div class="form-group">
-                            <label class="form-label">Vendedor</label>
-                            <select id="vendedorVenda" class="form-select" required>
-                                <option value="">Selecione um vendedor</option>
-                                <!-- As opções serão preenchidas dinamicamente via JavaScript -->
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Serviço</label>
-                            <select id="servicoVenda" class="form-select" required onchange="atualizarTipoComissao()">
-                                <option value="">Selecione um serviço</option>
-                                <!-- As opções serão preenchidas dinamicamente via JavaScript -->
-                            </select>
-                            <small id="tipoComissaoInfo" class="form-text"></small>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Data da Venda</label>
-                            <input type="text" id="dataVenda" class="form-input" placeholder="DD/MM/AAAA" maxlength="10" oninput="formatarDataInput(this)">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Nome do Cliente</label>
-                            <input type="text" id="nomeCliente" class="form-input" placeholder="Digite o nome do cliente" required>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Empresa Parceira</label>
-                            <select id="empresaParceira" class="form-select" required>
-                                <option value="">Selecione uma empresa parceira</option>
-                                <!-- As opções serão preenchidas dinamicamente via JavaScript -->
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Valor da Venda</label>
-                            <input type="text" id="valorVenda" class="form-input" placeholder="R$ 0,00" required oninput="formatarMoeda(this)">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Valor a Receber</label>
-                            <input type="text" id="valorReceber" class="form-input" placeholder="R$ 0,00" required oninput="formatarMoeda(this)">
-                        </div>
-                        <div class="form-group">
-                            <label class="form-label">Comissão</label>
-                            <small id="tipoComissaoInfo" class="form-text"></small>
-                            <input type="text" id="comissao" class="form-input" placeholder="0,00" required oninput="formatarComissao(this)">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Registrar Venda</button>
-                    </form>
+  <div class="form-group">
+    <label for="vendedorVenda">Vendedor:</label>
+    <select id="vendedorVenda" class="form-select" required>
+      <option value="">Selecione um vendedor</option>
+      <!-- Opções serão preenchidas dinamicamente -->
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="servicoVenda">Serviço:</label>
+    <select id="servicoVenda" class="form-select" required>
+      <option value="">Selecione um serviço</option>
+      <!-- Opções serão preenchidas dinamicamente -->
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="dataVenda">Data da Venda:</label>
+    <input type="text" id="dataVenda" class="form-input" placeholder="DD/MM/AAAA" required>
+  </div>
+  <div class="form-group">
+    <label for="nomeCliente">Nome do Cliente:</label>
+    <input type="text" id="nomeCliente" class="form-input" placeholder="Digite o nome do cliente" required>
+  </div>
+  <div class="form-group">
+    <label for="empresaParceira">Empresa Parceira:</label>
+    <select id="empresaParceira" class="form-select" required>
+      <option value="">Selecione uma empresa parceira</option>
+      <!-- Opções serão preenchidas dinamicamente -->
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="valorVenda">Valor da Venda:</label>
+    <input type="text" id="valorVenda" class="form-input" placeholder="R$ 0,00" required>
+  </div>
+  <div class="form-group">
+    <label for="valorReceber">Valor a Receber:</label>
+    <input type="text" id="valorReceber" class="form-input" placeholder="R$ 0,00" required>
+  </div>
+  <div class="form-group">
+    <label for="comissao">Comissão:</label>
+    <input type="text" id="comissao" class="form-input" placeholder="0,00" required>
+  </div>
+  <button type="submit" class="btn btn-primary">Registrar Venda</button>
+</form>
                 </div>
             </div>
         </div>
@@ -366,5 +364,65 @@
   // Inicializa o Realtime Database
   const database = getDatabase(app);
 </script>
+
+    // Função para registrar uma venda no Firebase
+function registrarVenda(venda) {
+  const vendasRef = ref(database, 'vendas');
+  push(vendasRef, venda)
+    .then(() => {
+      alert('Venda registrada com sucesso!');
+      limparCamposVenda(); // Limpa os campos do formulário após o registro
+    })
+    .catch((error) => {
+      console.error('Erro ao registrar venda:', error);
+      alert('Erro ao registrar venda. Tente novamente.');
+    });
+}
+
+// Função para limpar os campos do formulário de venda
+function limparCamposVenda() {
+  document.getElementById('vendedorVenda').value = '';
+  document.getElementById('servicoVenda').value = '';
+  document.getElementById('dataVenda').value = '';
+  document.getElementById('nomeCliente').value = '';
+  document.getElementById('empresaParceira').value = '';
+  document.getElementById('valorVenda').value = '';
+  document.getElementById('valorReceber').value = '';
+  document.getElementById('comissao').value = '';
+}
+
+// Captura o envio do formulário de venda
+document.getElementById('vendaForm').addEventListener('submit', function (e) {
+  e.preventDefault(); // Impede o recarregamento da página
+
+  // Cria um objeto com os dados da venda
+  const venda = {
+    vendedor: document.getElementById('vendedorVenda').value,
+    servico: document.getElementById('servicoVenda').value,
+    data: document.getElementById('dataVenda').value,
+    nomeCliente: document.getElementById('nomeCliente').value,
+    empresaParceira: document.getElementById('empresaParceira').value,
+    valorVenda: parseFloat(document.getElementById('valorVenda').value.replace(/[^0-9,]/g, '').replace(',', '.')),
+    valorReceber: parseFloat(document.getElementById('valorReceber').value.replace(/[^0-9,]/g, '').replace(',', '.')),
+    comissao: parseFloat(document.getElementById('comissao').value.replace(/[^0-9,]/g, '').replace(',', '.'))
+  };
+
+  // Registra a venda no Firebase
+  registrarVenda(venda);
+});
+
+    // Função para buscar vendas do Firebase
+function buscarVendas() {
+  const vendasRef = ref(database, 'vendas');
+  onValue(vendasRef, (snapshot) => {
+    const vendas = snapshot.val();
+    console.log('Vendas encontradas:', vendas);
+    // Aqui você pode atualizar a interface com as vendas recuperadas
+  });
+}
+
+// Buscar vendas ao carregar a página
+buscarVendas();
+    
 </body>
 </html>
