--- a/index.html
+++ b/index.html
@@ -7,16 +7,53 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header class="dashboard-header">
-            <h1 class="dashboard-title">Dashboard de Gestão de Vendas</h1>
-            <nav class="navigation">
-                <button class="nav-button active" onclick="showTab('dashboard')">Dashboard</button>
-                <button class="nav-button" onclick="showTab('cadastros')">Cadastros</button>
-                <button class="nav-button" onclick="showTab('vendas')">Vendas</button>
-                <button class="nav-button" onclick="showTab('relatorios')">Relatórios</button>
-            </nav>
-        </header>
+     <div class="container">
+        <!-- Conteúdo do dashboard -->
+    </div>
+
+    <!-- Spinner de Carregamento -->
+    <div id="loadingSpinner" class="d-none">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Carregando...</span>
+        </div>
+    </div>
+
+    <!-- Bibliotecas externas -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.24/jspdf.plugin.autotable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+
+    <!-- Firebase e inicialização -->
+    <script type="module">
+        // Importe as funções necessárias do Firebase
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+        import { getFirestore, collection, addDoc, getDocs, updateDoc, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+
+        // Configuração do Firebase (substitua pelas suas credenciais)
+        const firebaseConfig = {
+            apiKey: "AIzaSyBjTJBsddXjGr3Fpb5YsLs7PbCOZQN3fQU",
+            authDomain: "dashboard-vendas-dfa67.firebaseapp.com",
+            projectId: "dashboard-vendas-dfa67",
+            storageBucket: "dashboard-vendas-dfa67.firebasestorage.app",
+            messagingSenderId: "817829195288",
+            appId: "1:817829195288:web:1f95eac6d60573d6a2dd6d",
+            measurementId: "G-YXPS1SKYMM"
+        };
+
+        // Inicialize o Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const db = getFirestore(app);
+
+        // Exporte as funções do Firebase para uso global
+        window.firebase = { db, collection, addDoc, getDocs, updateDoc, doc, deleteDoc };
+
+        // Importe o scripts.js após inicializar o Firebase
+        import './scripts.js';
+    </script>
 
         <!-- Dashboard -->
         <div id="dashboard" class="tab-content active">
